# capi-wasm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml
scripts/: build_local_with_runtime_env.sh  build_mock_debug.sh  build_mock_release.sh  build_testnet.sh  reset_and_build_local.sh  reset_local.sh
src/: dependencies.rs  error.rs  inputs_validation.rs  lib.rs
src/js/: bridge.rs  bridge_general.rs  common.rs  explorer_links.rs  inputs_validation_js.rs  into_js_value.rs  js_types_workarounds.rs  load_dao_user_view_with_id.rs  load_project_user_view_with_id.rs  load_project_user_view_with_uuid.rs  mod.rs  to_sign_js.rs
src/js/create_dao/: create_assets.rs  create_dao.rs  mod.rs  submit_dao.rs  submit_save_dao.rs
src/js/create_project/: create_assets.rs  create_project.rs  mod.rs  submit_project.rs  submit_save_project.rs
src/js/funds_activity/: funds_activity.rs  mod.rs
src/js/general/: balance.rs  js_types_workarounds.rs  mod.rs
src/js/invest/: buy_shares.rs  get_user_shares_count.rs  load_dao_user_view.rs  load_project_user_view.rs  mod.rs  opt_in_to_app.rs  submit_buy_shares.rs
src/js/investment/: harvest.rs  load_investment.rs  load_pending_votes.rs  mod.rs  submit_harvest.rs
src/js/lock/: lock.rs  mod.rs  submit_lock.rs
src/js/pay_dao/: mod.rs  pay_dao.rs  submit_pay_dao.rs
src/js/pay_project/: mod.rs  pay_project.rs  submit_pay_project.rs
src/js/queries/: holders_count.rs  income_vs_spending.rs  mod.rs  my_daos.rs  my_projects.rs  my_shares.rs  shares_distribution.rs
src/js/roadmap/: add_roadmap_item.rs  load_roadmap.rs  mod.rs  submit_add_roadmap_item.rs
src/js/stake/: mod.rs  stake.rs  submit_stake.rs
src/js/unlock/: mod.rs  submit_unlock.rs  unlock.rs
src/js/unstake/: mod.rs  submit_unstake.rs  unstake.rs
src/js/update_app/: check_for_updates.rs  mod.rs  submit_update_app.rs  update_app.rs
src/js/update_data/: mod.rs  submit_update_data.rs  updatable_data.rs  update_data.rs
src/js/view_dao/: drain.rs  mod.rs  submit_drain.rs  view_dao.rs
src/js/view_project/: drain.rs  load_open_withdrawal_requests.rs  mod.rs  submit_drain.rs  view_project.rs
src/js/vote/: common.rs  get_votes.rs  load_requests_for_voters.rs  mod.rs  submit_vote.rs  vote.rs
src/js/withdraw/: init_withdrawal_request.rs  load_requests.rs  mod.rs  save_withdrawal_request.rs  submit_init_withdrawal_request.rs  submit_withdraw.rs  withdraw.rs  withdrawal_history.rs
src/model/: dao_for_users.rs  dao_for_users_view_data.rs  dao_js.rs  mod.rs  project_for_users.rs  project_for_users_view_data.rs
src/provider/: add_roadmap_item_provider.rs  app_updates_provider.rs  balance_provider.rs  buy_shares.rs  calculate_total_price.rs  claim_provider.rs  create_assets_provider.rs  create_dao_provider.rs  dao_provider.rs  dao_user_view_provider.rs  description_provider.rs  dividends_provider.rs  drain_provider.rs  funds_activity_provider.rs  funds_raising_provider.rs  holders_count_provider.rs  income_vs_spending_provider.rs  investment_provider.rs  load_dao_with_id_provider.rs  lock_provider.rs  mod.rs  my_daos_provider.rs  my_shares_provider.rs  optin_to_app_provider.rs  pay_dao_provider.rs  providers.rs  reclaim_provider.rs  rekey_provider.rs  roadmap_provider.rs  shares_count_provider.rs  shares_distribution_provider.rs  team_provider.rs  unlock_provider.rs  update_app_provider.rs  update_data_provider.rs  view_dao_provider.rs  withdraw_provider.rs  withdrawal_history_provider.rs  wyre_provider.rs
src/provider/def/: add_roadmap_item_provider_def.rs  app_updates_provider_def.rs  balance_provider_def.rs  buy_shares_provider_def.rs  calculate_total_price_def.rs  claim_provider_def.rs  create_assets_provider_def.rs  create_dao_provider_def.rs  dao_provider_def.rs  dao_user_view_provider_def.rs  description_provider_def.rs  dev_provider_def.rs  dividends_provider_def.rs  drain_provider_def.rs  funds_activity_provider_def.rs  funds_raising_provider_def.rs  hash_provider_def.rs  holders_count_provider_def.rs  income_vs_spending_provider_def.rs  investment_provider_def.rs  load_dao_with_id_provider_def.rs  lock_provider_def.rs  metadata_provider_def.rs  mod.rs  my_daos_provider_def.rs  my_shares_provider_def.rs  optin_to_app_provider_def.rs  pay_dao_provider_def.rs  (+14 more)
src/server/: api.rs
src/service/: account_state.rs  api.rs  app_state.rs  available_funds.rs  constants.rs  drain_if_needed.rs  invest_or_lock.rs  invest_or_stake.rs  load_project_view_data.rs  mod.rs  number_formats.rs  storage.rs  str_to_algos.rs  teal_api.rs  wallet_connect_tx.rs
src/teal/: app_capi_approval.rs  app_central_approval.rs  app_central_clear.rs  capi_escrow.rs  central_app_approve.rs  central_app_clear.rs  central_escrow.rs  customer_escrow.rs  dao_app_approval.rs  dao_app_clear.rs  invest_escrow.rs  investing_escrow.rs  locking_escrow.rs  mod.rs  staking_escrow.rs  update_teal.rs
(+46 files in other folders)
