[package]
name = "wasm"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }

algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main", features = ["rustls"] }
# algonaut = { path = "../../../algonaut" }

core = { path = "../../backend/core" }
# core = { git = "ssh://git@github.com/ivanschuetz/capi-core.git", branch = "main" }
# core = { git = "https://github.com/ivanschuetz/capi-core", branch = "main" }

my-algo = { git = "https://github.com/ivanschuetz/my-algo-rust-adapter", branch = "main" }
# my-algo = { path = "../../../my-algo" }

reqwest = { version = "=0.11.4", features = ["json"] }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
wasm-bindgen-futures = "0.4.24"
rust_decimal = "1.15"
wasm-logger = "0.2"
log = "0.4"
data-encoding = "2.3.2"
rmp-serde = "0.15.5"
urlencoding = "2.0.0"

# uuid = { version = "0.8", features = ["serde", "v4"] }
# need this version for v4 to work on WASM
uuid = { git = "https://github.com/uuid-rs/uuid", tag = "1.0.0-alpha.1", features = ["serde", "v4"] }

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size (more aggressive)
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
